--- a/scanner/.gitignore
+++ b/scanner/.gitignore
@@ -1,24 +1,37 @@
-# Logs
-logs
-*.log
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/dist
+
+# misc
+.DS_Store
+.env
+.env.local
+.env.*.local
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-lerna-debug.log*
+.vscode/
+.idea/
+*.swp
 
-node_modules
-dist
-dist-ssr
-*.local
+# local build artifacts
+*.log
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+# OS generated files
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+# Vite cache
+/.vite
+
+# Optional: ignore editor config
+*.code-workspace
