--- a/local_backend/requirements.txt
+++ b/local_backend/requirements.txt
@@ -13,6 +13,7 @@ pydantic==2.11.7
 pydantic_core==2.33.2
 pymongo==4.13.2
 python-dotenv==1.1.1
+python-multipart==0.0.20
 sniffio==1.3.1
 starlette==0.47.2
 typing-inspection==0.4.1
